--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,26 @@ services:
       - .:/app
     environment:
       - FLASK_ENV=development
+      - FLASK_APP=app.py
+      - DATABASE_URL=postgresql://user:password@db:5432/finance_db
+    command: >
+      sh -c "
+        flask db init &&
+        flask db migrate &&
+        flask db upgrade &&
+        flask run --host=0.0.0.0 --port=5001
+      "
     depends_on:
       - db
 
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: your_username
-      POSTGRES_PASSWORD: your_password
-      POSTGRES_DB: your_database
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: finance_db
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
